# comp24

./: .envrc  .gitignore  Makefile  README.md  bibliography.bib  exam.md  pairing.md  preamble.tex  preamble_listings.tex
AsdfML/: .gdbinit  .gitignore  .ocamlformat  .ocamlformat-ignore  AsdfML.opam  AsdfML.opam.template  add-license.sh  dune  dune-project
AsdfML/lib/: dune  utils.ml
AsdfML/runtime/: .rustfmt.toml  Cargo.toml  dune  rust-toolchain.toml
AsdfML/test/: dune  inline_inferencer.ml  inline_parser.ml  many_inferencer.ml  many_inferencer.t  many_parser.ml  many_parser.t  utils.ml
BDSML/: BDSML.opam  dune-project
BDSML/_build/: .db  .digest-db  log
BDSML/lib/: dune
BDSML/test/: dune
BasedML/: .gitignore  .ocamlformat  BasedML.opam  BasedML.opam.template  Makefile  dune-project
BasedML/_build/: log
BasedML/lib/: a.out  ast.cmi  ast.cmo  ast.ml  dune  parser.ml
BasedML/runtime/: dune  ml_gc.c  ml_gc.cpp  ml_gc.h  ml_runtimelib.c  ml_runtimelib.h  ml_stdlib.c  ml_stdlib.h
BasedML/test/: anf_demo.ml  anf_tests.t  anf_types_demo.ml  anf_types_tests.t  closure_conversion_demo.ml  closure_conversion_tests.t  dune  egraphs_demo.ml  egraphs_tests.t  lifting_demo.ml  lifting_tests.t  match_elimination_demo.ml  match_elimination_tests.t  parser_demo.ml  parser_tests.t  test.txt  typeinference_demo.ml  typeinference_tests.t
FML/: .gitignore  FML.opam  dune-project
FML/lib/: dune
FML/tests/: a_conv_manytest.t  a_conv_runner.ml  alpha_conv_manytest.t  alpha_conv_runner.ml  anf_manytest.t  anf_manytests.t  anf_runner.ml  c_conv_manytest.t  c_conv_runner.ml  closure_conv_manytest.t  closure_conv_runner.ml  dune  inferencer_manytests.t  inferencer_runner.ml  inferencer_test.ml  inferencer_tests.ml  lambda_lift_manytest.t  lambda_lift_runner.ml  lambda_lifting_manytests.t  lambda_lifting_runner.ml  match_elimination_manytest.t  match_elimination_runner.ml  parser_manytests.t  parser_runner.ml  parser_tests.ml  parser_tests.mli  pe_manytests.t  pe_runner.ml
HTML/: HTML.opam  dune-project
HTML/demos/: alpha_demo.ml  alpha_demo.t  anf_demo.ml  anf_demo.t  cc_ll_demo.ml  cc_ll_demo.t  dune  inferencer_demo.ml  inferencer_demo.t  parser_demo.ml  parser_demo.t
HTML/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencer.mli  parser.ml  parser.mli  tests.ml  tests.mli  typing.ml  typing.mli
HamsterML/lib/: .ocamlinit  dune  runtime.c
HelpML/: HelpML.opam  dune-project
HelpML/demos/: inferencerTests.ml  inferencerTests.t
HelpML/lib/: anf.ml  anf.mli  anfPrinter.ml  anfPrinter.mli  ast.ml  ast.mli  astPrinter.ml  astPrinter.mli  closure.ml  closure.mli  counter.ml  counter.mli  dune  inferencer.ml  inferencer.mli  lambdaLifting.ml  lambdaLifting.mli  llast.ml  llastPrinter.ml  llastPrinter.mli  llvmCompiler.ml  llvmCompiler.mli  parser.ml  parser.mli  restrictedAst.ml  stdlibFunc.ml  stdlibFunc.mli  typ.ml  typ.mli
KreML/: .envrc  .gitignore  .ocamlformat-ignore  KreML.opam  KreML.opam.template  a.out  add-license.sh  dune-project  kreml  out  res  run.sh  test.ml
KreML/lib/: Ast.ml  Ast.mli  Ast_printer.ml  Ast_printer.mli  Ast_transformer.ml  Ast_transformer.mli  Inferencer.ml  Inferencer.mli  Parser.ml  Parser.mli  Typed_ast.ml  Utils.ml  dune  test.ml
KreML/runtime/: dune  llvm_сс.md  out  runtime.c  rv_runtime_aux.S  rv_runtime_aux.h
KreML/test/: Closure_conv.ml  Inference_test.ml  Inferencer.ml  Inferencer_test.ml  Liveness_analysis.ml  Llvm_codegen.ml  Parser.ml  Parser_test.ml  Pp_test.ml  Rv_codegen.ml  Rv_regalloc.ml  Transformers.ml  cc.t  dune  liveness_analysis.t  llvm.t  llvm_codegen.t  llvm_exec.t  manytests_inferencer.t  manytests_parser.t  qcheck.t  rv_codegen.t  rv_exec.t  rv_regalloc.t  transformers.t
ObaML/: .gitignore  ObaML.opam  ObaML.opam.template  dune-project
ObaML/demo_tests/: anf_tests.ml  anf_tests.t  ast_simplifier_tests.ml  ast_simplifier_tests.t  closure_conversion_tests.ml  closure_conversion_tests.t  dune  infer_tests.ml  infer_tests.t  lambda_lifting_tests.ml  lambda_lifting_tests.t  llvm_compiler_tests.ml  llvm_compiler_tests.t  parser_tests.ml  parser_tests.t  simplifier_tests.ml  simplifier_tests.t
ObaML/lib/: ast.ml  ast_pretty_printer.ml  containers.ml  dune  inferencer.ml  inferencer.mli  inferencerTypes.ml  parser.ml  parser.mli  std.ml  typedtree.ml  typedtree.mli
ObaML/tests/: demoParse.ml  demoParse.t  dune  infer_tests.ml  infer_tests.t  parser_tests.ml
ScaML/: LICENSE  ScaML.opam  dune-project  manytests
ShaitanML/: .gitignore  .ocamlformat  .ocamlinit  ShaitanML.opam  dune-project
ShaitanML/cram/: dune  infer.ml  infer.t  parser_tests_cram.t  parser_tests_cram.t.err  test.ml
ShaitanML/lib/: alpha.ml  anf.ml  anf_ast.ml  ast.ml  ast.mli  closure.ml  closure.mli  codegen.ml  common.ml  dune  infer.ml  infer.mli  interpreter.ml  interpreter.mli  l_lifting.ml  l_lifting.mli  l_lifting_ast.ml  llvm_utils.ml  parser.ml  parser.mli  pat_elim.ml  pat_elim_ast.ml  printer.ml  runtime.c  typedtree.ml  typedtree.mli
ShaitanML/quickcheck/: dune  generator.ml  printer.ml
ShaitanML/test/: dune  infer.ml  infer_test.ml  interpret_test.ml  parser.ml  parser.mli  parser_test.ml  parser_test.mli  parser_tests_cram.t  tests.ml
TEST/: dune-project
XaxaML/: .gitignore  .pre-commit-config.yaml  Makefile  XaxaML.opam  XaxaML.opam.template  dune-project
XaxaML/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  parser.ml  parser.mli  std_names.ml  std_names.mli  typedtree.ml  typedtree.mli
XaxaML/program_tests/: alpha_conversion_tests.t  closure_conversion_tests.t  dune  infer_tests.t  lambda_lifting_tests.t  parser_tests.t  remove_patterns_tests.t  run_alpha_conversion.ml  run_closure_conversion.ml  run_infer.ml  run_lambda_lifting.ml  run_parser.ml  run_remove_patterns.ml  (+2 more)
aefjnvMl/: .ocamlinit  aefjnvMl.opam  dune-project
arML/: .gitignore  arML.opam  dune-project
asdfML/: AsdfML.opam  dune  dune-project
demo2/: demo2.opam  dune-project
neml/: README.md  dune  dune-project  neml.opam  neml.opam.template  tests.t
slarnML/: .gitignore  .ocamlformat  Makefile  dune-project  slarnML.opam
(+2941 files in other folders)
