(lang dune 3.8)

(name BasedML)

(generate_opam_files true)

(source
 (github Salvatore112/comp24))

(authors "Salvatore112" , "Osogi")

(maintainers "Salvatore112" , "Osogi")

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(package
 (name BasedML)
 (synopsis "A small MiniML compiler ")
 (depends
  ocaml
  dune
  bisect_ppx
  qcheck
  (llvm
   (= "16.0.6+nnp"))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
