(lang dune 3.8)

(name FML)

(generate_opam_files true)

(source
 (github DmitryPilyuk/FML))

(authors "DmitryPilyuk" , "RozhkovAleksandr")

(maintainers "DmitryPilyuk" , "RozhkovAleksandr")

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(package
 (name FML)
 (synopsis "Compiler of MiniML")
 (depends
  ocaml
  dune
  bisect_ppx
  (llvm
   (= "16.0.6+nnp"))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
