(lang dune 3.16)

(cram enable)

(name KreML)

(generate_opam_files true)

(source
 (github oveeernight/comp24))

(authors "oveeernight")

(maintainers "oveeernight")

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(package
 (name KreML)
 (synopsis "A KreML compiler")
 (version 0.1)
 (depends
  base
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  (llvm
   (= "16.0.6+nnp"))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
