(lang dune 3.8)

(name TEST)

(generate_opam_files true)

(source
 (github Kakadu/comp24))

(authors "Kakadu")

(maintainers "Kakadu")

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(package
 (name TEST)
 (synopsis "A short LLVM demo")
 (depends
  ocaml
  dune
  bisect_ppx
  (llvm
   (= "16.0.6+nnp"))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
