(lang dune 3.8)

(name arML)

(generate_opam_files true)

(source
 (github raf-nr/arML))

(authors
 "raf-nr <nurmuhametovrafik04@gmail.com"
 ,
 "ksenmel <ksennmel@gmail.com>")

(maintainers
 "raf-nr <nurmuhametovrafik04@gmail.com"
 ,
 "ksenmel <ksennmel@gmail.com>")

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(package
 (name arML)
 (allow_empty)
 (synopsis "A small miniML compiler")
 (depends ocaml dune bisect_ppx))
