(lang dune 3.15)

(name neml)

(generate_opam_files true)

(source
 (github therain7/neml))

(authors
 "Andrei <therain.i@yahoo.com>"
 "PavlushaSource <pavlushkin.dima1785@gmail.com>")

(maintainers
 "Andrei <therain.i@yahoo.com>"
 "PavlushaSource <pavlushkin.dima1785@gmail.com>")

(license MIT)

(package
 (name neml)
 (synopsis "Neml compiler")
 (description "A compiler for some non-existent programming language")
 (depends
  ocaml
  dune
  base
  stdio
  bisect_ppx
  ppx_expect
  pprint
  angstrom
  ppx_deriving
  ppx_sexp_conv))
