(executable
 (name parser_demo)
 (modules parser_demo)
 (public_name parser_demo)
 (libraries parser stdio))

(cram
 (deps %{bin:parser_demo}))

(executable
 (name typeinference_demo)
 (modules typeinference_demo)
 (public_name typeinference_demo)
 (libraries typeinference stdio))

(cram
 (deps %{bin:typeinference_demo}))
