(include_subdirs unqualified)

(library
 (name fml_lib)
 (public_name FML.Lib)
 (modules
  Ast
  Parser
  Inf_errors
  Inf_pprint
  Inferencer
  Typedtree
  Pattern_elim
  Common
  Pe_ast
  Me_ast
  Alpha_conv
  A_conv
  Match_elimination
  Lambda_lift
  Closure_conv
  Lambda_lifting
  Anf_ast
  Anf
  Codegen)
 (modules_without_implementation inf_errors)
 (libraries base angstrom llvm llvm.analysis llvm.executionengine)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
