(include_subdirs unqualified)

(library
 (name fml_lib)
 (public_name FML.Lib)
 (modules
  Ast
  Parser
  Inf_errors
  Inf_pprint
  Inferencer
  Typedtree
  Common
  Me_ast
  A_conv
  C_conv
  Match_elimination
  Anf_ast
  Anf
  Lambda_lift)
 (modules_without_implementation inf_errors)
 (libraries base angstrom llvm llvm.analysis llvm.executionengine)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
