(library
 (name HTML_lib)
 (public_name HTML.Lib)
 (modules Ast Parser Parser Inferencer Typing)
 (libraries base angstrom)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name tests)
 (modules tests)
 (libraries HTML_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
