(library
 (modules
  Ast
  Parser
  Lexer
  Typing
  Anf
  CC
  Utils
  LL
  AC
  ME
  PrinterAst
  PrinterLL
  PrinterME
  PrinterAnf)
 (libraries llvm)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (name HamsterML)
 (public_name HamsterML))

(include_subdirs unqualified)
