(library
 (modules
  Ast
  Parser
  Lexer
  Typing
  Anf
  AC
  CC
  LL
  ME
  Compiler
  Utils
  PrinterAst
  PrinterLL
  PrinterME)
 (libraries llvm)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (name HamsterML)
 (public_name HamsterML))

(include_subdirs unqualified)
